# dumpbot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  WORKERS.md  extract_and_push.sh  pyproject.toml  run_arq_worker.py  run_worker.py  worker_settings.py
.github/workflows/: test.yml
dumpyarabot/: __init__.py  __main__.py  arq_config.py  arq_jobs.py  auth.py  config.py  dump_worker.py  file_utils.py  firmware_downloader.py  firmware_extractor.py  gemini_analyzer.py  gemini_image_generator.py  gitlab_manager.py  handlers.py  message_formatting.py  message_queue.py  mockup_handlers.py  moderated_handlers.py  process_utils.py  property_extractor.py  redis_storage.py  schemas.py  storage.py  ui.py  url_utils.py  utils.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: __init__.py  e2e_infrastructure.py  test_direct_dump_flow.py
tests/fixtures/mock_firmware/: minimal_build.prop  samsung_build.prop  xiaomi_build.prop
tests/integration/: __init__.py  test_arq_jobs.py
tests/unit/: __init__.py  test_handlers.py  test_message_formatting.py  test_message_queue.py  test_moderated_handlers.py  test_schemas.py  test_url_utils.py  test_utils.py
